[package]
name = "cryptostream"
version = "0.2.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>",
		"NeoSmart Technologies <https://neosmart.net/>"]
description = "Transparent encryption and decryption for Read and Write streams"
homepage = "https://github.com/neosmart/cryptostream"
repository = "https://github.com/neosmart/cryptostream"
readme = "README.md"
keywords = ["encryption", "decryption", "cryptography", "cryptostream", "openssl"]
categories = ["cryptography"]
license = "MIT"
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = [ "vendored" ], optional = true }
openssl-sys = { package = "openssl", version = "0.10", optional = true }

[features]
default = [ "openssl" ]
system-openssl = [ "openssl-sys" ]

[dev-dependencies]
base64 = "0.9"
rand = "0.5"
