[package]
name = "cryptostream"
version = "0.3.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>",
		"NeoSmart Technologies <https://neosmart.net/>"]
description = "Transparent encryption and decryption for Read and Write streams"
homepage = "https://github.com/neosmart/cryptostream"
repository = "https://github.com/neosmart/cryptostream"
readme = "README.md"
keywords = ["encryption", "decryption", "cryptography", "cryptostream", "openssl"]
categories = ["cryptography"]
license = "MIT"
edition = "2018"

[dependencies]
openssl = { version = "0.10" }

[features]
default = [ "openssl-vendored" ]
openssl-vendored = [ "openssl/vendored" ]

[dev-dependencies]
base64 = "0.11"
rand = "0.7"
