[package]
name = "cryptostream"
version = "0.3.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>",
		"NeoSmart Technologies <https://neosmart.net/>"]
description = "Transparent encryption and decryption for Read and Write streams"
homepage = "https://github.com/neosmart/cryptostream"
repository = "https://github.com/neosmart/cryptostream"
readme = "README.md"
keywords = ["encryption", "decryption", "cryptography", "cryptostream", "openssl"]
categories = ["cryptography"]
license = "MIT"
edition = "2018"

[dependencies]
openssl = "0.10.41"

[features]
# default = [ "openssl-vendored" ]
openssl-vendored = [ "openssl/vendored" ]

[dev-dependencies]
base64 = "0.13.0"
rand = { version = "0.8.5", features = [ "min_const_gen" ] }
size = "0.4.0"
